# yog-sothoth

./: .env.example  Justfile  README.md  flake.nix  go.work  guide.md  pyproject.toml  todo.md  vision.md
src/hack_py/: __init__.py  hack.py
src/yog_sothoth/: __init__.py  go.mod  go.sum  main.go
src/yog_sothoth/cmd/: doctor.go  env.go  hack.go  init.go  reborn.go  root.go
src/yog_sothoth/internal/env/: env.go
src/yog_sothoth/internal/hack/: hack.go
src/yog_sothoth/internal/health/: health.go
src/yog_sothoth/internal/scaffold/: scaffold.go
src/yog_sothoth/pkg/config/: config.go
src/yog_sothoth/pkg/ui/: ui.go
src/yog_sothoth/scripts/: embed.go  health_check.sh  reborn_bun.sh  reborn_deno.sh
